--- a/src/css/Section.css
+++ b/src/css/Section.css
@@ -28,10 +28,10 @@
   .section:nth-child(2) {
     background-color: #ffffff;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto auto;
     grid-template-rows: auto 2rem auto;
     gap: 10px; 
-    width: 80%;
+    /* width: 100%; */
     align-content: start;
     margin: 0 auto
   }
