--- a/src/css/About.css
+++ b/src/css/About.css
@@ -43,6 +43,11 @@
     justify-self: flex-start;
     align-self: flex-start;
 
+    .ocbc {
+        height: 50px;
+        width: 100px;
+    }
+
     .para2 {
         font-size: 20px;
         text-align: left;
@@ -107,22 +112,42 @@ margin: 0 10px; /* Space between text and lines */
     grid-column: 1 / 3;
     gap: 3rem;
     width: 100%;
-  }
-  
-.item1 {
-    grid-column: 1; /* First column */
-    grid-row: 1 / 3; /* Spans both rows */
-    background-color: lightblue;
-  }
-  
-.item2 {
-    grid-column: 2 / 3; /* Second column */
-    grid-row: 1 / 2; /* First row in second column */
-    background-color: lightcoral;
-  }
-  
-.item3 {
-    grid-column: 2 / 3; /* Second column */
-    grid-row: 2 / 3; /* Second row in second column */
-    background-color: lightgreen;
-  }
+}
+
+.past-experiences{
+    display: flex;
+    flex-direction: column;
+    justify-self: flex-start;
+    align-self: flex-start;
+    margin-top: 1rem;
+
+    h2 {
+        text-align: left;
+        margin: 0.5rem 1rem;
+    }
+
+    .para4 {
+        font-size: 20px;
+        text-align: left;
+        margin: 0.2rem 1rem;
+        color: red;
+    }
+
+    .smrt {
+        width: 100px;
+        height: 45px;
+        margin: 0 1rem 0 0;
+    }
+
+    .para5 {
+        display: block;
+        font-size: 15px;
+        margin: 0 1rem;
+        white-space: pre-wrap;
+        text-align: left;
+
+        span{
+            padding-left: 200px;
+        }
+    }
+}
